--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <a class="navbar-brand" href="#">
-      <img [src]= " '../../assets/app-logo.png' " alt="Logo" height="100" width="200">
+      <img [src]= " '../../assets/app-logo.png' " alt="Logo" height="60" width="230">
     </a>
   
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
@@ -11,16 +11,13 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav ml-auto">
         <li class="nav-item">
-            search-bar
-          <!-- <app-search-bar></app-search-bar> -->
+          <app-searchbar></app-searchbar>
         </li>
         <li class="nav-item">
-            Account
-          <!-- <app-account></app-account> -->
+          <app-account></app-account>
         </li>
         <li class="nav-item">
-            Cart
-          <!-- <app-cart></app-cart> -->
+          <app-cart></app-cart>
         </li>
       </ul>
     </div>
