--- a/src/app/searchbar/searchbar.component.html
+++ b/src/app/searchbar/searchbar.component.html
@@ -1,5 +1,5 @@
 <div class="input-group">
-    <input type="text" class="form-control" placeholder="Search...">
+    <input type="text" class="form-control" style="width: 300px;" placeholder="Search...">
     <div class="input-group-append">
       <span class="input-group-text">
         <i class="material-icons">search</i>
