--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,25 +1,21 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">
-      <img [src]= " '../../assets/app-logo.png' " alt="Logo" height="60" width="230">
-    </a>
-  
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-      aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-  
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav ml-auto">
-        <li class="nav-item">
-          <app-searchbar></app-searchbar>
-        </li>
-        <li class="nav-item">
-          <app-account></app-account>
-        </li>
-        <li class="nav-item">
-          <app-cart></app-cart>
-        </li>
-      </ul>
-    </div>
-  </nav>
-  
+  <a class="navbar-brand" href="#">
+    <img src="../../assets/app-logo.png" alt="Logo" height="60" width="230">
+  </a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNav">
+    <ul class="navbar-nav ml-auto">
+      <li class="nav-item">
+        <app-searchbar></app-searchbar>
+      </li>
+      <li class="nav-item">
+        <app-account></app-account>
+      </li>
+      <li class="nav-item">
+        <app-cart></app-cart>
+      </li>
+    </ul>
+  </div>
+</nav>
