--- a/src/app/account/account.component.css
+++ b/src/app/account/account.component.css
@@ -7,16 +7,87 @@
   cursor: pointer;
 }
 
+.account-icon:hover {
+  cursor: pointer;
+  background-color: rgb(241, 232, 232);
+}
 .account-dropdown {
-  width: auto;
+  width: 300px;
+  background-color: rgb(241, 232, 232);
   height: auto;
-  border: 1px solid black;
+  border-radius: 5px;
+  border: 1px thin black;
   position: absolute;
   top: 100%;
-  left: 0;
+  right: 0;
   display: none;
+  transition-property: height, opacity;
+  transition-duration: 0.3s;
+  transition-timing-function: ease;
+  height: 0;
+  opacity: 0;
 }
+.account-dropdown button {
+  width: 100%;
+  height: 40px;
+  margin: 5px;
+  font-weight: 300;
+  margin-left: 5%;
+}
+.account-dropdown button:nth-child(1) {
+  background-color: black;
+  width: 90%;
+  border-radius: 5px;
+  color: aliceblue;
+}
+.account-dropdown button:nth-child(1):hover{
+  background-color: aqua;
+  border: none;
+}
+.account-dropdown button:nth-child(2) {
+  background-color: aliceblue;
+  width: 90%;
+  color: black;
+  border: 1px thin black;
+  border-radius: 5px;
+}
+.account-dropdown button:nth-child(2):hover{
+  background-color: aqua;
+  border: none;
+}
+.account-dropdown button:nth-child(3) {
+  border: none;
+  width: 90%;
+  border-radius: 5px;
+  color: black;
+  background-color: rgb(241, 232, 232);
+}
+.account-dropdown button:nth-child(3):hover{
+background-color: white;
 
+}
+.account-dropdown button:nth-child(4) {
+  border: none;
+  width: 90%;
+  border-radius: 5px;
+  color: black;
+  background-color: rgb(241, 232, 232);
+}
+.account-dropdown button:nth-child(4):hover{
+background-color: white;
+}
+.account-dropdown button:nth-child(5) {
+  border: none;
+  width: 90%;
+  border-radius: 5px;
+  color: black;
+  background-color: rgb(241, 232, 232);
+}
+.account-dropdown button:nth-child(5):hover{
+background-color: white;
+}
 .account-dropdown.open {
   display: block;
+  height: auto;
+  opacity: 1;
 }
