--- a/src/app/cart/cart.component.css
+++ b/src/app/cart/cart.component.css
@@ -1,6 +1,7 @@
 .cart {
     position: relative;
     display: inline-block;
+
   }
   
   .cart-icon {
@@ -13,7 +14,7 @@
     border: 1px solid black;
     position: absolute;
     top: 100%;
-    left: 0;
+    right: 0;
     display: none;
   }
   
