--- a/src/app/cart/cart.component.css
+++ b/src/app/cart/cart.component.css
@@ -7,12 +7,19 @@
   .cart-icon {
     cursor: pointer;
   }
-  
+  .cart-icon:hover{
+    background-color: rgb(241, 232, 232);
+    border-radius: 5px;
+    /* border: 1px solid black; */
+    border-bottom: none;
+  }
   .cart-dropdown {
     width: auto;
     height: auto;
     border: 1px solid black;
+    background-color: rgb(241, 232, 232);
     position: absolute;
+    border-radius: 5px;
     top: 100%;
     right: 0;
     display: none;
@@ -21,4 +28,28 @@
   .cart-dropdown.open {
     display: block;
   }
-  
+  .counter {
+    position: absolute;
+    top: -15px;
+    right: 25px;
+    background-color: black;
+    color: white;
+    border-radius: 50%;
+    padding: 5px;
+    font-size: 12px;
+}
+@media (max-width:991.98px){
+  .cart-text{
+    display: none;
+  }
+  .counter {
+    position: absolute;
+    top: -15px;
+    right: 15px;
+    background-color: black;
+    color: white;
+    border-radius: 50%;
+    padding: 5px;
+    font-size: 12px;
+}
+}
