--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,34 +1,130 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">
-    <img src="../../assets/app-logo.png" class="image" alt="Logo" height="60" width="120%">
-  </a>
-  <ul class="navbar-nav ml-auto">
-    <li class="nav-item .d-block">
+  <button class="navbar-toggler .ml-2 position-static .d-none .d-sm-block .d-md-none" type="button"
+    data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false"
+    aria-label="Toggle navigation" (click)="toggleMenu()">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <ul class="navbar-nav d-lg-none .d-md-none">
+    <li class="nav-item">
       <app-searchbar></app-searchbar>
     </li>
   </ul>
-  <button class="navbar-toggler .ml-2 position-static .d-none .d-sm-block .d-md-none" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation" (click)="toggleMenu()">
-    <span class="navbar-toggler-icon"></span>
-  </button>
+  <a class="navbar-brand" routerLink="">
+    <img src="../../assets/app-logo.png" class="image" alt="Logo" height="60" width="120%">
+  </a>
+  <ul class="navbar-nav" id="flex">
+    <li class="nav-item-1">
+      <app-searchbar></app-searchbar>
+    </li>
+    <li class="nav-item-2">
+      <app-account></app-account>
+    </li>
+    <li class="nav-item-3">
+      <app-cart></app-cart>
+    </li>
+    <li class="nav-item-4" routerLink="/authentication/admin" *ngIf="isAdminVisible">
+      <div>
+        <span class="material-symbols-outlined">
+          admin_panel_settings
+        </span>
+        <span class="admin-text">Admin</span>
+      </div>
+    </li>
+  </ul>
+</nav>
+<nav class="below-navbar navbar-expand-lg navbar-light bg-light">
   <div class="collapse navbar-collapse justify-content-between" [ngClass]="{ 'show': isMenuOpen }" id="navbarCollapse">
     <div class="collapse navbar-collapse" id="subNavbarCollapse" [ngClass]="{ 'show': isSubMenuOpen }">
-      <ul class="navbar-nav ">
+      <ul class="below-nav">
         <li class="nav-item">
-          <app-account></app-account>
+          T-shirt
         </li>
         <li class="nav-item">
-          <app-cart></app-cart>
+          Men
+        </li>
+        <li class="nav-item">
+          Women
+        </li>
+        <li class="nav-item">
+          Kids
+        </li>
+        <li class="nav-item">
+          Home & Living
+        </li>
+        <li class="nav-item">
+          Beauty
+        </li>
+        <li class="nav-item">
+          Makeup
+        </li>
+        <li class="nav-item">
+          Tools
+        </li>
+        <li class="nav-item">
+          Brands
+        </li>
+        <li class="nav-item">
+          Self Care
+        </li>
+        <li class="nav-item">
+          Deal
+        </li>
+        <li class="nav-item">
+          Sale
+        </li>
+        <li class="nav-item">
+          Build a Routine
+        </li>
+        <li class="nav-item">
+          Blog
         </li>
       </ul>
     </div>
   </div>
+
   <div class="collapse navbar-collapse" id="navbarCollapse" [ngClass]="{ 'show': isMenuOpen }">
-    <ul class="navbar-nav ml-auto">
-      <li class="nav-item d-lg-none .d-md-none">
-        <app-account></app-account>
+    <ul class="navbar-nav ml-auto" id="small-box">
+      <li class="nav-item d-lg-none .d-md-none ">
+        T-shirt
       </li>
       <li class="nav-item d-lg-none .d-md-none">
-        <app-cart></app-cart>
+        Men
+      </li>
+      <li class="nav-item d-lg-none .d-md-none">
+        Women
+      </li>
+      <li class="nav-item d-lg-none .d-md-none">
+        Kids
+      </li>
+      <li class="nav-item d-lg-none .d-md-none">
+        Home & Living
+      </li>
+      <li class="nav-item d-lg-none .d-md-none">
+        Beauty
+      </li>
+      <li class="nav-item d-lg-none .d-md-none">
+        Makeup
+      </li>
+      <li class="nav-item d-lg-none .d-md-none">
+        Tools
+      </li>
+      <li class="nav-item d-lg-none .d-md-none">
+        Brands
+      </li>
+      <li class="nav-item d-lg-none .d-md-none">
+        Self Care
+      </li>
+      <li class="nav-item d-lg-none .d-md-none">
+        Deal
+      </li>
+      <li class="nav-item d-lg-none .d-md-none">
+        Sale
+      </li>
+      <li class="nav-item d-lg-none .d-md-none">
+        Build a Routine
+      </li>
+      <li class="nav-item d-lg-none .d-md-none">
+        Blog
       </li>
     </ul>
   </div>
