--- a/src/app/searchbar/searchbar.component.css
+++ b/src/app/searchbar/searchbar.component.css
@@ -1,37 +1,62 @@
 .input-group-append:hover {
-    cursor: pointer;
-  }
-  .input-group{
-    width:170%;
-  }
+  cursor: pointer;
+}
 
- 
-  @media (max-width: 991.98px){
+.input-group {
+  width: 170%;
+}
 
-    .input-group{
-      width: 90%;
-    }
-
+@media (max-width: 991.98px) {
+  .form-control {
+    display: none;
   }
-  @media (max-width: 768.98px){
-
-    .input-group{
-      position: fixed;
-      margin-top: -18px;
-      width: 60%;
-    }
+  .input-group {
+    width: 90%;
+    background-color: rgb(255, 255, 255) !important;
   }
-  @media (max-width: 468.98px){
+}
 
-    .input-group{
-      position: fixed;
-      width: 50%;
-    }
+@media (max-width: 768.98px) {
+  .form-control {
+    display: none;
   }
-  @media (max-width: 268.98px){
+  .input-group {
+    position: fixed;
+    margin-top: -18px;
+    width: 10%;
+  }
+}
 
-    .input-group{
-      position: fixed;
-      width: 30%;
-    }
+@media (max-width: 468.98px) {
+  .form-control {
+    display: none;
   }
+  .input-group {
+    position: fixed;
+    width: 10%;
+  }
+}
+
+@media (max-width: 268.98px) {
+  .form-control {
+    display: none;
+  }
+  .input-group {
+    position: fixed;
+    width: 10%;
+  }
+}
+.form-input{
+  width: 100%;
+}
+.dropdown-content {
+  position: absolute;
+  top: 100%;
+  left: 0;
+  z-index: 999;
+  background-color: #f9f9f9;
+  border: 1px solid #ddd;
+  border-top: none;
+  width: 100%;
+  padding: 10px;
+}
