--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -37,16 +37,18 @@
     <div class="collapse navbar-collapse" id="subNavbarCollapse" [ngClass]="{ 'show': isSubMenuOpen }">
       <ul class="below-nav">
         <li class="nav-item">
-          T-shirt
-        </li>
-        <li class="nav-item">
-          Men
+         <div>
+          <p>Men</p>
+         </div>
         </li>
         <li class="nav-item">
           Women
         </li>
         <li class="nav-item">
           Kids
+        </li>
+        <li class="nav-item">
+          T-shirt
         </li>
         <li class="nav-item">
           Home & Living
@@ -85,9 +87,6 @@
   <div class="collapse navbar-collapse" id="navbarCollapse" [ngClass]="{ 'show': isMenuOpen }">
     <ul class="navbar-nav ml-auto" id="small-box">
       <li class="nav-item d-lg-none .d-md-none ">
-        T-shirt
-      </li>
-      <li class="nav-item d-lg-none .d-md-none">
         Men
       </li>
       <li class="nav-item d-lg-none .d-md-none">
@@ -95,6 +94,9 @@
       </li>
       <li class="nav-item d-lg-none .d-md-none">
         Kids
+      </li>
+      <li class="nav-item d-lg-none .d-md-none">
+        T-shirt
       </li>
       <li class="nav-item d-lg-none .d-md-none">
         Home & Living
@@ -129,3 +131,4 @@
     </ul>
   </div>
 </nav>
+
