--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -37,48 +37,64 @@
     <div class="collapse navbar-collapse" id="subNavbarCollapse" [ngClass]="{ 'show': isSubMenuOpen }">
       <ul class="below-nav">
         <li class="nav-item">
-         <div>
-          <p>Men</p>
+         <div class="small-nav">
+          <img src="https://rukminim1.flixcart.com/fk-p-flap/128/128/image/50379f65f7b59622.png?q=100" alt="">
+          <p>Top Offers</p>
          </div>
         </li>
         <li class="nav-item">
-          Women
+          <div class="small-nav">
+            <img src="https://rukminim1.flixcart.com/fk-p-flap/128/128/image/0a0243119f02f7a5.png?q=100" alt="">
+            <p>Mobile & Tablet</p>
+           </div>
         </li>
         <li class="nav-item">
-          Kids
+          <div class="small-nav">
+            <img src="https://rukminim1.flixcart.com/fk-p-flap/128/128/image/da4491af4ee551d6.png?q=100" alt="">
+            <p>Electronics</p>
+           </div>
         </li>
         <li class="nav-item">
-          T-shirt
+          <div class="small-nav">
+            <img src="https://rukminim1.flixcart.com/fk-p-flap/128/128/image/7a9da987f315df35.png?q=100" alt="">
+            <p>TV & Appliances</p>
+           </div>
         </li>
         <li class="nav-item">
-          Home & Living
+          <div class="small-nav">
+            <img src="https://rukminim1.flixcart.com/fk-p-flap/128/128/image/f7b2a4eeb35a8c9f.png?q=100" alt="">
+            <p>Fashions</p>
+           </div>
         </li>
         <li class="nav-item">
-          Beauty
+          <div class="small-nav">
+            <img src="https://rukminim1.flixcart.com/fk-p-flap/128/128/image/e83a5f27b01d9a7e.png?q=100" alt="">
+            <p>Beauty</p>
+           </div>
         </li>
         <li class="nav-item">
-          Makeup
+          <div class="small-nav">
+            <img src="https://rukminim1.flixcart.com/fk-p-flap/128/128/image/a8cfa33c7206ae57.png?q=100" alt="">
+            <p>Home & Kitchen</p>
+           </div>
         </li>
         <li class="nav-item">
-          Tools
+          <div class="small-nav">
+            <img src="https://rukminim1.flixcart.com/fk-p-flap/128/128/image/4e0bdf8567ecb960.png?q=100" alt="">
+            <p>Furniture</p>
+           </div>
         </li>
         <li class="nav-item">
-          Brands
+          <div class="small-nav">
+            <img src="https://rukminim1.flixcart.com/fk-p-flap/128/128/image/def8193d5a7380ee.png?q=100" alt="">
+            <p>Flights & More</p>
+           </div>
         </li>
         <li class="nav-item">
-          Self Care
-        </li>
-        <li class="nav-item">
-          Deal
-        </li>
-        <li class="nav-item">
-          Sale
-        </li>
-        <li class="nav-item">
-          Build a Routine
-        </li>
-        <li class="nav-item">
-          Blog
+          <div class="small-nav">
+            <img src="https://rukminim1.flixcart.com/fk-p-flap/128/128/image/aecfaba5969b96dd.png?q=100" alt="">
+            <p>Grossary</p>
+           </div>
         </li>
       </ul>
     </div>
@@ -87,46 +103,34 @@
   <div class="collapse navbar-collapse" id="navbarCollapse" [ngClass]="{ 'show': isMenuOpen }">
     <ul class="navbar-nav ml-auto" id="small-box">
       <li class="nav-item d-lg-none .d-md-none ">
-        Men
+        Top Offers
       </li>
       <li class="nav-item d-lg-none .d-md-none">
-        Women
+        Mobile & Tablets
       </li>
       <li class="nav-item d-lg-none .d-md-none">
-        Kids
+        Electronics
       </li>
       <li class="nav-item d-lg-none .d-md-none">
-        T-shirt
+        TV & Appliances
       </li>
       <li class="nav-item d-lg-none .d-md-none">
-        Home & Living
+        Fashion
       </li>
       <li class="nav-item d-lg-none .d-md-none">
         Beauty
       </li>
       <li class="nav-item d-lg-none .d-md-none">
-        Makeup
+        Home & Kitchen
       </li>
       <li class="nav-item d-lg-none .d-md-none">
-        Tools
+        Furniture
       </li>
       <li class="nav-item d-lg-none .d-md-none">
-        Brands
+        Flights 
       </li>
       <li class="nav-item d-lg-none .d-md-none">
-        Self Care
-      </li>
-      <li class="nav-item d-lg-none .d-md-none">
-        Deal
-      </li>
-      <li class="nav-item d-lg-none .d-md-none">
-        Sale
-      </li>
-      <li class="nav-item d-lg-none .d-md-none">
-        Build a Routine
-      </li>
-      <li class="nav-item d-lg-none .d-md-none">
-        Blog
+        Grossary
       </li>
     </ul>
   </div>
