--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -122,6 +122,9 @@ ul{
     width: 100%;
     height: 100%;
   }
+  .below-navbar{
+    height: 10px;
+  }
 }
 @media (max-width: 768.98px) {
   .nav-item-2{
