styling createStory box

--- a/src/app/banner/banner.component.html
+++ b/src/app/banner/banner.component.html
@@ -1,4 +1,4 @@
-<div id="Banner" *ngIf="showBanner">
+<div id="Banner">
   <div style="width:100%;">
     <p-carousel class="p-carousel-indicators" [value]="bannerData" [autoplayInterval]="2000"
       [styleClass]="'custom-carousel'">
