--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -1,4 +1,4 @@
-<nav *ngIf="showNav" class="below-navbar navbar-expand-lg navbar-light bg-light">
+<nav class="below-navbar navbar-expand-lg navbar-light bg-light">
     <div class="collapse navbar-collapse justify-content-between" [ngClass]="{ 'show': isMenuOpen }" id="navbarCollapse">
       <div class="collapse navbar-collapse" id="subNavbarCollapse" [ngClass]="{ 'show': isSubMenuOpen }">
         <ul class="below-nav">
