--- a/src/app/searchbar/searchbar.component.html
+++ b/src/app/searchbar/searchbar.component.html
@@ -1,5 +1,5 @@
 <div class="input-group">
-  <input type="text" class="form-control" placeholder="Search for prodcuts brands and more...">
+  <input type="text" class="form-control" placeholder="Search for products brands and more...">
   <div class="input-group-append">
     <span class="input-group-text" (click)="toggleSearchDropdown()">
       <i class="material-icons">search</i>
@@ -9,7 +9,7 @@
 
 <div class="collapse" [ngClass]="{'show': isSearchDropdownOpen}" id="searchDropdown">
   <div class="dropdown-content">
-    <input type="text" class="form-input" placeholder="Search for prodcuts brands and more...">
+    <input type="text" class="form-input" placeholder="Search for products brands and more...">
     <!-- Additional dropdown content can be added here -->
   </div>
 </div>
