--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,8 @@
 <app-navbar></app-navbar>
 <ng-container *ngIf="isHomeVisit">
     <app-nav></app-nav>
+    <app-banner></app-banner>
+    <app-top-offers></app-top-offers>
+    <app-electronics></app-electronics>
 </ng-container>
+
