--- a/src/app/top-offers/top-offers.component.css
+++ b/src/app/top-offers/top-offers.component.css
@@ -33,26 +33,27 @@
   }
   .arrow-button {
     position: sticky;
-    scroll-behavior: smooth;
     top: 50%;
+    scroll-behavior: smooth;
     transform: translateY(-50%);
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 30px;
-    height: 30px;
-    background-color: #007bff;
-    color: #fff;
-    font-weight: bold;
+    width: 70px;
+    height: 50px;
+    border-radius: 4px;
+    background-color: #941616;
+    color: #eeebeb;
+    font-weight: 900;
     cursor: pointer;
     z-index: 1;
   }
   .arrow-button.left {
-    left: 10px;
+    left: -10px;
     margin-top: 14%;
   }
   .arrow-button.right {
-    right: 10px;
+    right: -10px;
     margin-top: 14%;
   }
   .slider-container {
@@ -64,13 +65,14 @@
     display: flex;
     padding: 10px;
     height: 280px;
-    border: 1px solid black;
+    width: auto;
+    overflow-x: hidden;
     transition: transform 0.3s ease;
   }
   .slider .box {
     margin-right: 10px;
     width: 200px;
-    border: 1px solid black;
+    height: 100%;
     flex-shrink: 0;
   }
   
