--- a/frontend/src/app/top-offers/top-offers.component.html
+++ b/frontend/src/app/top-offers/top-offers.component.html
@@ -13,6 +13,8 @@
                 <div class="arrow-button right" (click)="slideRight()">&gt;</div>
             </div>
         </div>
-        <div class="box box8">Box 8</div>
+        <div class="box box8">
+            <img src="https://rukminim1.flixcart.com/fk-p-flap/464/708/image/f6ca031cbd39d666.jpg?q=70" alt="">
+        </div>
     </div>
 </div>
