--- a/frontend/src/app/top-offers/top-offers.component.html
+++ b/frontend/src/app/top-offers/top-offers.component.html
@@ -1,10 +1,13 @@
 <div>
     <div class="big-box">
         <div class="box box1">
-             <div style="margin-left: 25%;">
-                <h4>Top <hr style="display:none"> Offers</h4>
-                <button style="border: none;background-color: cyan;color: antiquewhite;border-radius: 2px;">View All</button>
-             </div>
+            <div style="margin-left: 25%;margin-top: 10%;">
+                <h4>Top
+                    <hr style="display:none"> Offers
+                </h4>
+                <button style="border: none;background-color: cyan;color: antiquewhite;border-radius: 2px;">View
+                    All</button>
+            </div>
             <img src="https://rukminim1.flixcart.com/flap/128/128/image/f15c02bfeb02d15d.png?q=100" alt="">
         </div>
         <div class="slider-container">
