--- a/frontend/src/app/home/home.component.html
+++ b/frontend/src/app/home/home.component.html
@@ -3,6 +3,6 @@
     <app-nav></app-nav>
     <app-banner></app-banner>
     <app-top-offers></app-top-offers>
-    <app-electronics></app-electronics>
+    <app-footer></app-footer>
 </ng-container>
 
