change name to shopease

--- a/frontend/src/app/footer/footer.component.html
+++ b/frontend/src/app/footer/footer.component.html
@@ -36,7 +36,7 @@
         </div>
         <div>
             <h6>Mail Us</h6>
-            <p>Flipkart Internet Private Limited,</p>
+            <p>ShopEase Internet Private Limited,</p>
             <p> Buildings Alyssa, Begonia &</p>
             <p> Clove Embassy Tech Village, </p>
             <p>Outer Ring Road, Devarabeesanahalli Village,</p>
@@ -45,7 +45,7 @@
         </div>
         <div>
             <h6>Registered Office Address</h6>
-            <p>Flipkart Internet Private Limited,</p>
+            <p>ShopEase Internet Private Limited,</p>
             <p>Buildings Alyssa, Begonia &</p>
             <p> Clove Embassy Tech Village,</p>
             <p>Outer Ring Road, Devarabeesanahalli Village,</p>
@@ -73,7 +73,7 @@
             <p>Help Center</p>
         </div>
         <div>
-            <p>© 2007-2023 Flipkart.com</p>
+            <p>© 2007-2023 ShopEase.com</p>
         </div>
         <div>
             <img src="https://static-assets-web.flixcart.com/fk-p-linchpin-web/fk-cp-zion/img/payment-method_69e7ec.svg" alt="">
