--- a/frontend/src/app/footer/footer.component.css
+++ b/frontend/src/app/footer/footer.component.css
@@ -1,6 +1,7 @@
 .footer{
     width: 100%;
-    height: 330px;
+   min-height: 330px;
+   height: auto;
     background-color: rgb(23,35,55);
 }
 .foot-up-div{
@@ -30,4 +31,34 @@ p{
 }
 .foot-below-div>div>p{
     margin-top: 13px;
+}
+@media (max-width:991.98px){
+    .foot-below-div{
+        display: grid;
+        grid-template-columns: repeat(3,1fr);
+    }
+    .foot-up-div{
+        display: grid;
+        grid-template-columns: repeat(3,1fr);
+    }
+}
+@media (max-width:768.98px){
+    .foot-below-div{
+        display: grid;
+        grid-template-columns: repeat(2,1fr);
+    }
+    .foot-up-div{
+        display: grid;
+        grid-template-columns: repeat(2,1fr);
+    }
+}
+@media (max-width:468.98px){
+    .foot-below-div{
+        display: grid;
+        grid-template-columns: repeat(1,1fr);
+    }
+    .foot-up-div{
+        display: grid;
+        grid-template-columns: repeat(1,1fr);
+    }
 }
