--- a/frontend/src/app/authentication/register/register.component.html
+++ b/frontend/src/app/authentication/register/register.component.html
@@ -1,11 +1,10 @@
-<!-- form.component.html -->
 <div class="container">
     <form (ngSubmit)="submitForm()" #form="ngForm">
         <div class="form-group">
             <label for="fullName"><span class="required">*</span>Full Name </label>
             <input type="text" id="fullName" class="form-control" name="fullName" required ngModel
                 #fullNameInput="ngModel">
-            <div *ngIf="fullNameInput.touched && fullNameInput.invalid" class="alert alert-danger alert-text">
+            <div style="font-size: 10px;" *ngIf="fullNameInput.touched && fullNameInput.invalid || (formSubmitted && fullNameInput.invalid)" class="alert alert-danger alert-text">
                 Full Name is required.
             </div>
         </div>
@@ -13,14 +12,14 @@
             <label for="userName"><span class="required">*</span>User Name </label>
             <input type="text" id="userName" class="form-control" name="userName" required ngModel
                 #userNameInput="ngModel">
-            <div *ngIf="userNameInput.touched && userNameInput.invalid" class="alert alert-danger alert-text">
+            <div style="font-size: 10px;" *ngIf="userNameInput.touched && userNameInput.invalid || (formSubmitted && userNameInput.invalid)" class="alert alert-danger alert-text">
                 User Name is required.
             </div>
         </div>
         <div class="form-group">
             <label for="email"><span class="required">*</span>Email </label>
             <input type="email" id="email" class="form-control" name="email" required ngModel #emailInput="ngModel">
-            <div *ngIf="emailInput.touched && emailInput.invalid" class="alert alert-danger alert-text">
+            <div style="font-size: 10px;" *ngIf="emailInput.touched && emailInput.invalid || (formSubmitted && emailInput.invalid)" class="alert alert-danger alert-text">
                 Email is required.
             </div>
         </div>
@@ -28,7 +27,7 @@
             <label for="password"><span class="required">*</span>Password </label>
             <input type="password" id="password" class="form-control" name="password" required ngModel
                 #passwordInput="ngModel">
-            <div *ngIf="passwordInput.touched && passwordInput.invalid" class="alert alert-danger alert-text">
+            <div style="font-size: 10px;" *ngIf="passwordInput.touched && passwordInput.invalid || (formSubmitted && passwordInput.invalid)" class="alert alert-danger alert-text">
                 Password is required.
             </div>
         </div>
@@ -38,4 +37,6 @@
         </div>
     </form>
 </div>
+
+
 <app-footer></app-footer>
