--- a/frontend/src/app/top-offers/top-offers.component.css
+++ b/frontend/src/app/top-offers/top-offers.component.css
@@ -110,4 +110,12 @@
     height: 100%;
     flex-shrink: 0;
   }
+  .img-box{
+    width: 98.5%;
+    margin: auto;
+  }
+  .img-box img{
+    width: 100%;
+    height: 300px;
+  }
   
