--- a/frontend/src/app/top-offers/top-offers.component.html
+++ b/frontend/src/app/top-offers/top-offers.component.html
@@ -27,3 +27,7 @@
         </div>
     </div>
 </div>
+<div class="img-box">
+    <img src="https://rukminim1.flixcart.com/flap/3006/433/image/4789bc3aefd54494.jpg?q=50" alt="">
+    <img src="https://rukminim1.flixcart.com/flap/960/960/image/084789479074d2b2.jpg" alt="">
+</div>
