a lot changes in code

--- a/frontend/src/app/authentication/admin/admin.component.html
+++ b/frontend/src/app/authentication/admin/admin.component.html
@@ -1,14 +1,44 @@
 <div class="container">
-    <h1>User Details</h1>
-    <div *ngIf="loading" class="loading-message">Loading...</div>
-    <div *ngIf="user">
-      <div class="user-details">
-        <p><strong>Full Name:</strong> {{ user.fullName }}</p>
-        <p><strong>User Name:</strong> {{ user.userName }}</p>
-        <p><strong>Email:</strong> {{ user.email }}</p>
-        <p><strong>Password:</strong> {{ user.password }}</p>
-      </div>
-    </div>
+  <h1>User Details</h1>
+  <div *ngIf="loading" class="loading-message">Loading...</div>
+  <div>
+    <table class="user-table">
+      <tr>
+        <th>Full Name</th>
+        <th>User Name</th>
+        <th>Email</th>
+        <th>Update</th>
+        <th>Delete</th>
+      </tr>
+      <tr *ngFor="let user of users">
+        <td>
+          <ng-container *ngIf="!user.editMode">{{ user.fullName }}</ng-container>
+          <ng-container *ngIf="user.editMode">
+            <input type="text" [(ngModel)]="user.fullName" />
+          </ng-container>
+        </td>
+        <td>
+          <ng-container *ngIf="!user.editMode">{{ user.userName }}</ng-container>
+          <ng-container *ngIf="user.editMode">
+            <input type="text" [(ngModel)]="user.userName" />
+          </ng-container>
+        </td>
+        <td>
+          <ng-container *ngIf="!user.editMode">{{ user.email }}</ng-container>
+          <ng-container *ngIf="user.editMode">
+            <input type="text" [(ngModel)]="user.email" />
+          </ng-container>
+        </td>
+        <td>
+          <ng-container *ngIf="!user.editMode">
+            <button (click)="editUser(user)">Edit</button>
+          </ng-container>
+          <ng-container *ngIf="user.editMode">
+            <button (click)="updateUser(user)">Update</button>
+          </ng-container>
+        </td>
+        <td><button (click)="deleteUser(user)">Delete</button></td>
+      </tr>
+    </table>
   </div>
-  
-<app-footer></app-footer>
+</div>
