--- a/frontend/src/app/navbar/navbar.component.css
+++ b/frontend/src/app/navbar/navbar.component.css
@@ -86,6 +86,19 @@ ul{
   }
 }
 @media (max-width: 991.98px) {
+  .cart-text{
+    display: none;
+  }
+  .counter {
+    position: absolute;
+    top: -15px;
+    right: 15px;
+    background-color: black;
+    color: white;
+    border-radius: 50%;
+    padding: 5px;
+    font-size: 12px;
+  }
   .nav-item-2{
     margin-top: -10%;
   }
@@ -229,4 +242,46 @@ ul{
     width: 100%;
     height: 100%;
   }
+}
+
+
+
+.cart {
+  position: relative;
+  display: inline-block;
+
+}
+
+.cart-icon {
+  cursor: pointer;
+}
+.cart-icon:hover{
+  background-color: rgb(241, 232, 232);
+  border-radius: 5px;
+  border-bottom: none;
+}
+.cart-dropdown {
+  width: auto;
+  height: auto;
+  border: 1px solid black;
+  background-color: rgb(241, 232, 232);
+  position: absolute;
+  border-radius: 5px;
+  top: 100%;
+  right: 0;
+  display: none;
+}
+
+.cart-dropdown.open {
+  display: block;
+}
+.counter {
+  position: absolute;
+  top: -15px;
+  right: 25px;
+  background-color: black;
+  color: white;
+  border-radius: 50%;
+  padding: 5px;
+  font-size: 12px;
 }
