--- a/frontend/src/app/authentication/admin/admin.component.html
+++ b/frontend/src/app/authentication/admin/admin.component.html
@@ -3,7 +3,7 @@
   <div *ngIf="loading" class="loading-message">Loading...</div>
   <div>
     <table class="user-table">
-      <tr>
+      <tr class="user-head">
         <th>Full Name</th>
         <th>User Name</th>
         <th>Email</th>
